--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react": "^17.0.43",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
